--- a/src/main/resources/fxml/home.fxml
+++ b/src/main/resources/fxml/home.fxml
@@ -1,49 +1,46 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXDrawer?>
-<?import com.jfoenix.controls.JFXHamburger?>
+<?import com.jfoenix.controls.JFXComboBox?>
+<?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.controllers.MainController">
-   <children>
-      <BorderPane layoutX="76.0" prefHeight="45" style="-fx-background-color: black;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
-         <left>
-            <HBox prefHeight="100.0" prefWidth="200.0">
-               <Label style="-fx-background-color: F5C518;" text="FHMDb" BorderPane.alignment="CENTER">
-                  <font>
-                     <Font name="Calibri Bold" size="24.0" />
-                  </font>
-               </Label>
-               <Label styleClass="text-white" stylesheets="@../styles/styles.css" text="Welcome to FHMDb!" />
-            </HBox>
-         </left>
-         <right>
-            <JFXHamburger fx:id="hamburgerMenu" alignment="TOP_RIGHT" stylesheets="@../styles/styles.css" BorderPane.alignment="CENTER" />
-         </right>
+<VBox prefHeight="331.0" prefWidth="570.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="at.ac.fhcampuswien.fhmdb.controller.HomeController">
+   <HBox alignment="CENTER_LEFT" prefHeight="42.0" prefWidth="347.0" spacing="20.0"
+         style="-fx-background-color: black;">
+      <padding>
+         <Insets bottom="7.0" left="10.0" top="7.0"/>
+      </padding>
+      <Label style="-fx-background-color: F5C518;" text="FHMDb">
+         <font>
+            <Font name="Calibri Bold" size="24.0"/>
+         </font>
          <padding>
-            <Insets left="10.0" right="10.0" top="10.0" />
+            <Insets left="2.0" right="2.0"/>
          </padding>
-      </BorderPane>
-      <BorderPane fx:id="mainPane" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="45.0">
-
-      </BorderPane>
-      <JFXDrawer fx:id="drawer" prefWidth="130.0" AnchorPane.bottomAnchor="0.0" AnchorPane.topAnchor="0.0">
-         <sidePane>
-            <VBox>
-               <children>
-                  <JFXButton fx:id="homeBtn" onAction="#navigateToMovielist" prefHeight="25.0" prefWidth="130.0" text="Home" />
-                  <JFXButton fx:id="watchlistBtn" onAction="#navigateToWatchlist" prefWidth="130.0" text="Watchlist" />
-                  <JFXButton fx:id="aboutBtn" prefWidth="130.0" text="About" />
-               </children>
-            </VBox>
-         </sidePane>
-      </JFXDrawer>
-   </children>
-</AnchorPane>
+      </Label>
+      <Label styleClass="text-white" stylesheets="@styles.css" text="Welcome to FHMDb!"/>
+   </HBox>
+   <HBox spacing="5.0" styleClass="background-black" stylesheets="@styles.css">
+      <VBox.margin>
+         <Insets/>
+      </VBox.margin>
+      <padding>
+         <Insets bottom="20.0" left="10.0" top="20.0"/>
+      </padding>
+      <JFXButton fx:id="sortBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Sort (asc)"/>
+      <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb"/>
+      <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css"/>
+      <JFXComboBox fx:id="yearComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css"/>
+      <JFXComboBox fx:id="ratingComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css"/>
+      <JFXButton fx:id="searchBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Filter"/>
+      <JFXButton fx:id="resetBtn" styleClass="background-yellow" stylesheets="@styles.css" text="Reset"/>
+      <JFXButton fx:id="watchlistBtn" styleClass="background-orange" stylesheets="@styles.css" text="Open watchlist"/>
+   </HBox>
+   <JFXListView fx:id="movieListView" styleClass="background-black" style="-fx-background-color: black;" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
+</VBox>
