--- a/src/main/resources/fxml/movie-list.fxml
+++ b/src/main/resources/fxml/movie-list.fxml
@@ -10,16 +10,16 @@
 <VBox
         xmlns="http://javafx.com/javafx"
         xmlns:fx="http://javafx.com/fxml"
-        fx:controller="at.ac.fhcampuswien.fhmdb.controllers.MovieListController"
+        fx:controller="at.ac.fhcampuswien.fhmdb.controller.MovieListController"
         minHeight="575.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="45.0">
-    <HBox spacing="5.0" styleClass="background-black" stylesheets="@../styles/styles.css">
+    <HBox spacing="5.0" styleClass="background-black" stylesheets="@styles.css">
         <children>
-            <JFXButton fx:id="sortBtn" onAction="#sortBtnClicked" styleClass="background-yellow" stylesheets="@../styles/styles.css" text="Sort" />
+            <JFXButton fx:id="sortBtn" onAction="#sortBtnClicked" styleClass="background-yellow" stylesheets="@styles.css" text="Sort" />
             <TextField fx:id="searchField" prefHeight="25.0" prefWidth="170.0" promptText="Search FHMDb" />
-            <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@../styles/styles.css" />
-            <JFXComboBox fx:id="releaseYearComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@../styles/styles.css" />
-            <JFXComboBox fx:id="ratingFromComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@../styles/styles.css" />
-            <JFXButton fx:id="searchBtn" onAction="#searchBtnClicked" styleClass="background-yellow" stylesheets="@../styles/styles.css" text="Filter" />
+            <JFXComboBox fx:id="genreComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+            <JFXComboBox fx:id="releaseYearComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+            <JFXComboBox fx:id="ratingFromComboBox" focusColor="#f5c518" styleClass="filter-combo-box" stylesheets="@styles.css" />
+            <JFXButton fx:id="searchBtn" onAction="#searchBtnClicked" styleClass="background-yellow" stylesheets="@styles.css" text="Filter" />
         </children>
         <VBox.margin>
             <Insets />
@@ -28,5 +28,5 @@
             <Insets bottom="20.0" left="10.0" top="20.0" />
         </padding>
     </HBox>
-    <JFXListView fx:id="movieListView" stylesheets="@../styles/styles.css" VBox.vgrow="ALWAYS" />
+    <JFXListView fx:id="movieListView" stylesheets="@styles.css" VBox.vgrow="ALWAYS" />
 </VBox>
